--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<h1>This is test webserver</h1>
-<h1>This is from Idea1</h1>
-
-<h1>This is IDEA1 Change</h1>
-<h1>This is MAster change/Complex change</h1>
-
-<p>This is developer 2 change</p>
+<h1>This is Tested Branch</h1>
